<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/stock_symbol"
        style="@style/StockSymbolTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        tools:text="@string/placeholder_goog" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end">

        <TextView
            android:id="@+id/bid_price"
            style="@style/BidPriceTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/widget_value_padding"
            android:paddingLeft="@dimen/widget_value_padding"
            android:paddingRight="@dimen/widget_value_padding"
            android:paddingStart="@dimen/widget_value_padding"
            tools:text="@string/placeholder_value" />

        <TextView
            android:id="@+id/change"
            style="@style/PercentChangeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/percent_change_pill"
            android:paddingEnd="@dimen/widget_component_margin"
            android:paddingLeft="@dimen/widget_component_margin"
            android:paddingRight="@dimen/widget_component_margin"
            android:paddingStart="@dimen/widget_component_margin"
            tools:text="@string/placeholder_percentage" />
    </LinearLayout>
</LinearLayout>